--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 PORT=7777
 DB_URL=mongodb+srv://AdminUser:Abhishek123@cluster9354.nl5ubjl.mongodb.net/userdb?retryWrites=true&w=majority&appName=Cluster9354
+SECRET_KEY=THISISSCERET
